--- a/.github/workflows/tt-dockerbased.yml
+++ b/.github/workflows/tt-dockerbased.yml
@@ -30,6 +30,8 @@ jobs:
     name: Docker based step
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: python docker
         uses: ./docker/python3-alpine
       - name: python
