--- a/.github/workflows/tt-dockerbased.yml
+++ b/.github/workflows/tt-dockerbased.yml
@@ -18,4 +18,6 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7'
-    - run: python -c "import sys; print(sys.executable)"
+    - run: |
+        echo "WORKING PROGRESS"
+        python -c "import sys; print(sys.executable)"
