--- a/.github/workflows/tt-dockerbased.yml
+++ b/.github/workflows/tt-dockerbased.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   _githubbased_job:
-    name: GitHub based step
+    name: Action python setup
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
