--- a/.github/workflows/tt-dockerbased.yml
+++ b/.github/workflows/tt-dockerbased.yml
@@ -13,7 +13,7 @@ jobs:
   _githubbased_job:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
     - name: Python action setup
       uses: actions/setup-python@v1
       with:
