--- a/.github/workflows/tt-dockerbased.yml
+++ b/.github/workflows/tt-dockerbased.yml
@@ -19,7 +19,9 @@ jobs:
       with:
         python-version: '3.7'
     - name: Script executions
-      run: python app.py
+      run: |
+        pwd
+        ls
     - name: Script executions
       run: |
         echo "WORKING PROGRESS"
