--- a/.github/workflows/tt-action.yml
+++ b/.github/workflows/tt-action.yml
@@ -30,4 +30,7 @@ jobs:
         pwd
         ls
   _dockerbase_job:
-    container: python:3.7-alpine
+    steps:
+    - uses: actions/checkout@v2
+    - name: Test Docker
+      uses: ./python3
