--- a/.github/workflows/tt-action.yml
+++ b/.github/workflows/tt-action.yml
@@ -30,6 +30,7 @@ jobs:
         pwd
         ls
   _dockerbase_job:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Test Docker
