--- a/.github/workflows/tt-action.yml
+++ b/.github/workflows/tt-action.yml
@@ -25,7 +25,7 @@ jobs:
         echo "WORKING PROGRESS"
         python -c "import sys; print(sys.executable)"
     - name: Debug
-      if: ${{DEBUG}} == true
+      if: env.DEBUG == true
       run: |
         pwd
         ls
